@@ -1,10 +1,10 @@
 {
-  "count": 33,
+  "count": 31,
   "uniques": 18,
   "views": [
     {
       "timestamp": "2022-03-28T00:00:00Z",
-      "count": 5,
+      "count": 3,
       "uniques": 3
     },
     {
