@@ -1,3 +1,9 @@
+2022-04-11T08:18:37Z:
+* notice: last 14d: all unq: 31 18
+* notice: prev accum: outdated-all outdated-unq / all unq: 212 90 / 245 109
+* notice: next accum: outdated-all outdated-unq / all unq: 212 90 / 243 109
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -2 // +0 +0 / -0 -2
+
 2022-04-10T08:16:54Z:
 * notice: last 14d: all unq: 33 18
 * notice: prev accum: outdated-all outdated-unq / all unq: 212 90 / 243 107
